@@ -1,3 +1,7 @@
+09/02/2010:
+	- Fixed memory leak in Zoomify.cc and DeepZoom.cc
+
+
 11/01/2010:
 	- JPEG2000 support added via the Kakadu SDK. Added new class
 	  KakaduImage derived from the IIPImage class. JPEG2000 support
